Added Laravel as a dev dependency.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,35 @@
+# IDE-specific/
 .idea
 .history
 .vscode
 
-.DS_Store
-node_modules
-vendor
+# Vendor-specific.
+node_modules/
+vendor/
+npm-error.log
+yarn-error.log
+
+# Temp and swap files.
+*.swp
+./tmp
+
+# Laravel 4 specific
+bootstrap/compiled.php
+app/storage/
+
+# Laravel 5 & Lumen specific
+public/storage
+public/hot
+
+# Laravel 5 & Lumen specific with changed public path
+public_html/storage
+public_html/hot
+
+storage/*.key
+.env
+Homestead.yaml
+Homestead.json
+/.vagrant
+
+# Tests
+.phpunit.result.cache
