--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,11 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
 
-[js]
-indent_style = space
+[*.js,*.{yml,yaml}]
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
+
+[*.{yml,yaml}]
 indent_size = 2
