--- a/.editorconfig
+++ b/.editorconfig
@@ -8,6 +8,9 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 end_of_line = lf
 
+[*.json]
+indent_size = 4
+
 [*.js,*.{yml,yaml}]
 indent_size = 2
 
